[CSS] utopias: Stop pages being too short
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/11.x@46715 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/utopias.css
+++ b/styles/utopias.css
@@ -597,7 +597,9 @@ form.admin fieldset {
 /***** Feature-specific styles ****/
 /***** Wiki ******/
 
-
+#page-data {
+	min-height: 50em;
+}
 
 .wikitext ul {
 	margin: 0.2em 0;
